fix horizontal scroll bug

--- a/index.styl
+++ b/index.styl
@@ -33,7 +33,7 @@ a
     padding-right 20px
     font-weight 100
   tr:first-of-type
-    position fixed
+    position absolute
     background-color white
     border-bottom 1px solid black
     th:first-of-type
